RM-1423 fixed disabled background image, full width grabbing and command label vertical alignment
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@13954 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/ObjectBinding/Web/Res/HTML/Standard/BocAutoCompleteReferenceValue.css
+++ b/Remotion/ObjectBinding/Web/Res/HTML/Standard/BocAutoCompleteReferenceValue.css
@@ -2,7 +2,8 @@
 {
     position: relative;
     height: auto;
-    vertical-align: middle
+    vertical-align: middle;
+    display: inline-block;
 }
 
 div.bocAutoCompleteReferenceValueContent
@@ -38,11 +39,6 @@ div.bocAutoCompleteReferenceValue a.bocAutoCompleteReferenceValueCommand:hover
 div.bocAutoCompleteReferenceValue span.bocAutoCompleteReferenceValueCommand
 {
   cursor: default;
-}
-
-div.bocAutoCompleteReferenceValue *.bocAutoCompleteReferenceValueCommand span
-{
-  margin-right: 2px;
 }
 
 div.bocAutoCompleteReferenceValue img.bocAutoCompleteReferenceValueContent
